# litesvm

./: Cargo.toml
crates/lite-coverage/: Cargo.toml
crates/lite-coverage/src/: lib.rs  lite_coverage.rs  loader.rs  sbf.rs  stubs.rs  types.rs
crates/litesvm/: Cargo.toml
crates/litesvm/src/: accounts_db.rs  lib.rs  loader.rs  message_processor.rs  pt.rs  types.rs
crates/litesvm/test_programs/: Cargo.toml
crates/litesvm/test_programs/counter/: Cargo.toml
crates/litesvm/test_programs/counter/src/: lib.rs
crates/litesvm/test_programs/failure/src/: lib.rs
crates/litesvm/tests/: config_program.rs  counter_test.rs  gen_cov.sh
crates/loader/: Cargo.toml
crates/loader/tests/: loader.rs
crates/node-litesvm/: Cargo.toml
crates/node-litesvm/litesvm/: index.ts  internal.d.ts
crates/node-litesvm/src/: lib.rs
